helm/openldap/phpldapadmin/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openldap
  name: phpldapadmin
spec:
  type: ClusterIP
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    app: openldap
