helm/openldap/phpldapadmin/traefik-ldap.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ldap-ui
  namespace: openldap
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: openldap.qoocar.com
    http:
      paths:
      - backend:
          serviceName: phpldapadmin
          servicePort: 8080
